--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ body {
 .cell {
     width: 100px;
     height: 100px;
-    background-color: lightgray;
+    background-color: pink;
     display: flex;
     align-items: center;
     justify-content: center;
